--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,10 @@
   top: 0;
   right: 0;
 }
+
+.radionica-div {
+  border: 1px solid #000;
+  border-radius: 8px;
+  padding: 1rem;
+  margin-bottom: 1rem;
+}
