--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 #root {
-  max-width: 1280px;
+  width: 100%;
+  height: 100vh;
+  box-sizing: border-box;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
@@ -13,10 +14,12 @@
 }
 
 .radionica-div {
-  border: 1px solid #000;
+  border: 1px solid #c0c0c0;
   border-radius: 8px;
   padding: 1rem;
+  margin: 2rem auto;
   margin-bottom: 1rem;
+  width: 50%;
 }
 
 .admin-toggle {
