--- a/src/App.css
+++ b/src/App.css
@@ -7,13 +7,15 @@
 }
 
 .form-container {
-  border: 1px solid #000;
-  width: 80%;
-  margin: 0 auto;
+  border: 1px solid #c0c0c0;
+  border-radius: 8px;
   padding: 1rem;
+  margin: 2rem auto;
+  margin-bottom: 1rem;
+  width: 30%;
 }
 
-.radionica-div {
+.pregled-div {
   border: 1px solid #c0c0c0;
   border-radius: 8px;
   padding: 1rem;
@@ -30,13 +32,30 @@
 }
 
 .sidebar1 {
-  position: absolute; /* Position it relative to the viewport */
-  top: 87px; /* Position it under the header. Adjust this value based on the height of your header */
-  left: 0; /* Position it to the left of the webpage */
-  height: calc(100vh - 50px); /* Make it span the entire height of the document, minus the height of the header */
-  border: 1px solid #000; /* Add a border */
-  overflow: auto; /* Add scroll if content overflows */
-  width: 20%; /* Double the width of the sidebar. Adjust this value based on your current width */
-
+  position: absolute; 
+  top: 100px; 
+  left: 0; 
+  height: calc(100vh - 50px); 
+  border: 1px solid #c0c0c0; 
+  overflow: auto; 
+  width: 20%; 
 }
 
+.sidebar1 label {
+  display: block;
+}
+
+.mb-3.custom-tabs .nav-link {
+  background-color: rgb(0, 89, 255) !important;
+  color: white !important;
+}
+
+.mb-3.custom-tabs .nav-link.active {
+  background-color: rgb(0, 25, 109) !important;
+  color: white !important;
+}
+
+.table {
+  width: 50%;
+  margin: 0 auto; 
+}
